# public/swagger/swagger.json
@@ -9,14 +9,18 @@
         },
         "version": "1.0.0"
     },
-    "host": "api.ubgmart.com",
+    "host": "api-ubg.test",
     "basePath": "/",
     "schemes": [
-        "https"
+        "http"
     ],
     "paths": {
         "/api/auth/register": {
             "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "\u0110\u0103ng k\u00fd th\u00e0nh vi\u00ean",
                 "description": "Login user, s\u1eed d\u1ee5ng basic authentication b\u1eb1ng t\u00e0i kho\u1ea3n \u0111\u01b0\u1ee3c cung c\u1ea5p",
                 "parameters": [
                     {
@@ -58,6 +62,10 @@
         },
         "/api/auth/login": {
             "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "\u0110\u0103ng nh\u1eadp",
                 "description": "Login user, s\u1eed d\u1ee5ng basic authentication b\u1eb1ng t\u00e0i kho\u1ea3n \u0111\u01b0\u1ee3c cung c\u1ea5p",
                 "parameters": [
                     {
@@ -92,6 +100,10 @@
         },
         "/api/auth/logout": {
             "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "\u0110\u0103ng xu\u1ea5t",
                 "description": "Logout user",
                 "responses": {
                     "200": {
@@ -105,6 +117,10 @@
         },
         "/api/auth/user": {
             "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "L\u1ea5y th\u00f4ng tin user",
                 "description": "Return a user's information",
                 "parameters": [
                     {
@@ -127,6 +143,10 @@
         },
         "/api/auth/update-user": {
             "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "C\u1eadp nh\u1eadt th\u00f4ng tin user",
                 "description": "Update profile",
                 "parameters": [
                     {
@@ -182,6 +202,10 @@
         },
         "/api/auth/reset-password": {
             "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "\u0110\u1ed5i m\u1eadt kh\u1ea9u",
                 "description": "Reset password",
                 "parameters": [
                     {
@@ -216,6 +240,7 @@
         },
         "/api/flash-sale": {
             "get": {
+                "summary": "Danh s\u00e1ch s\u1ea3n ph\u1ea9m flash sale",
                 "description": "Get flash sale",
                 "responses": {
                     "200": {
@@ -234,6 +259,10 @@
         },
         "/api/group-product-list": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Danh s\u00e1ch s\u1ea3n ph\u1ea9m mua chung",
                 "description": "S\u1ea3n ph\u1ea9m mua chung",
                 "responses": {
                     "200": {
@@ -252,6 +281,10 @@
         },
         "/api/group-product-single": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Chi ti\u1ebft s\u1ea3n ph\u1ea9m mua chung",
                 "description": "Chi ti\u1ebft s\u1ea3n ph\u1ea9m mua chung",
                 "parameters": [
                     {
@@ -277,8 +310,96 @@
                 ]
             }
         },
+        "/api/get-province": {
+            "get": {
+                "tags": [
+                    "Locations"
+                ],
+                "summary": "Danh s\u00e1ch T\u1ec9nh th\u00e0nh",
+                "description": "L\u1ea5y ra danh s\u00e1ch T\u1ec9nh th\u00e0nh",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/get-districts": {
+            "get": {
+                "tags": [
+                    "Locations"
+                ],
+                "summary": "Danh s\u00e1ch Qu\u1eadn / Huy\u1ec7n",
+                "description": "L\u1ea5y ra danh s\u00e1ch qu\u1eadn huy\u1ec7n theo t\u1ec9nh th\u00e0nh",
+                "parameters": [
+                    {
+                        "name": "province_id",
+                        "in": "query",
+                        "description": "ID c\u1ee7a t\u1ec9nh th\u00e0nh",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/get-wards": {
+            "get": {
+                "tags": [
+                    "Locations"
+                ],
+                "summary": "Danh s\u00e1ch Ph\u01b0\u1eddng / X\u00e3",
+                "description": "L\u1ea5y ra danh s\u00e1ch Ph\u01b0\u1eddng / X\u00e3 theo Qu\u1eadn huy\u1ec7n",
+                "parameters": [
+                    {
+                        "name": "district_id",
+                        "in": "query",
+                        "description": "ID c\u1ee7a t\u1ec9nh th\u00e0nh",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
         "/api/main-menu": {
             "get": {
+                "tags": [
+                    "Menu"
+                ],
+                "summary": "Menu ch\u00ednh",
                 "description": "Get list main menu",
                 "responses": {
                     "200": {
@@ -292,6 +413,10 @@
         },
         "/api/list-order": {
             "get": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "L\u1ea5y ra danh s\u00e1ch \u0111\u01a1n h\u00e0ng",
                 "description": "Danh s\u00e1ch \u0111\u01a1n h\u00e0ng ",
                 "parameters": [
                     {
@@ -326,6 +451,10 @@
         },
         "/api/single-order": {
             "get": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Th\u00f4ng tin chi ti\u1ebft \u0111\u01a1n h\u00e0ng",
                 "description": "Chi ti\u1ebft \u0111\u01a1n h\u00e0ng",
                 "parameters": [
                     {
@@ -360,7 +489,11 @@
         },
         "/api/address-list": {
             "get": {
-                "description": "Danh s\u00e1ch \u0111\u1ecba ch\u1ec9 kh\u00e1ch h\u00e0ng",
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Danh s\u00e1ch \u0111\u1ecba ch\u1ec9 c\u1ee7a user",
+                "description": "Danh s\u00e1ch \u0111\u1ecba ch\u1ec9 c\u1ee7a user, hi\u1ec3n th\u1ecb trong l\u1ef1a ch\u1ecdn \u0111\u01a1n h\u00e0ng",
                 "parameters": [
                     {
                         "name": "customer_id",
@@ -385,8 +518,154 @@
                 ]
             }
         },
+        "/api/get-coupon-code": {
+            "get": {
+                "tags": [
+                    "Promotion & Discount"
+                ],
+                "summary": "L\u1ea5y ra th\u00f4ng tin gi\u1ea3m gi\u00e1 t\u1eeb m\u00e3 coupon",
+                "description": "M\u00e3 coupon",
+                "parameters": [
+                    {
+                        "name": "applied_coupon_code",
+                        "in": "query",
+                        "description": "M\u00e3 coupon",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/get-promotion-in-cart-value": {
+            "get": {
+                "tags": [
+                    "Promotion & Discount"
+                ],
+                "summary": "L\u1ea5y ra s\u1ed1 ti\u1ec1n n\u1ebfu c\u00f3 ch\u01b0\u01a1ng tr\u00ecnh promotion",
+                "description": "Promotion tr\u1eeb ti\u1ec1n trong \u0111\u01a1n h\u00e0ng, s\u1eed d\u1ee5ng \u0111\u1ec3 tr\u1eeb \u0111i t\u1ed5ng s\u1ed1 ti\u1ec1n \u0111\u01a1n h\u00e0ng",
+                "parameters": [
+                    {
+                        "name": "cart_items",
+                        "in": "query",
+                        "description": "danh s\u00e1ch \u0111\u01a1n h\u00e0ng",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "raw_total",
+                        "in": "query",
+                        "description": "T\u1ed5ng ti\u1ec1n \u0111\u01a1n h\u00e0ng",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "total_qty",
+                        "in": "query",
+                        "description": "T\u1ed5ng s\u1ed1 l\u01b0\u1ee3ng s\u1ea3n ph\u1ea9m",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/get-fee-shipping": {
+            "get": {
+                "tags": [
+                    "Shipping"
+                ],
+                "summary": "L\u1ea5y ra ph\u00ed ship",
+                "description": "Ph\u00ed ship \u0111\u01a1n h\u00e0ng",
+                "parameters": [
+                    {
+                        "name": "store_location",
+                        "in": "query",
+                        "description": "ID c\u1ee7a store locator m\u1eb7c \u0111\u1ecbnh khi v\u00e0o app",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "customer_id",
+                        "in": "query",
+                        "description": "ID c\u1ee7a kh\u00e1ch h\u00e0ng",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "order_total",
+                        "in": "query",
+                        "description": "T\u1ed5ng ti\u1ec1n \u0111\u01a1n h\u00e0ng",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "weight",
+                        "in": "query",
+                        "description": "T\u1ed5ng tr\u1ecdng l\u01b0\u1ee3ng",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "description": "T\u00ean t\u1ec9nh th\u00e0nh",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "state",
+                        "in": "query",
+                        "description": "T\u00ean qu\u1eadn huy\u1ec7n",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    }
+                },
+                "security": [
+                    {
+                        "basicAuth": []
+                    }
+                ]
+            }
+        },
         "/api/main-product-category": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Danh s\u00e1ch danh m\u1ee5c s\u1ea3n ph\u1ea9m",
                 "description": "Get list main category",
                 "responses": {
                     "200": {
@@ -400,6 +679,10 @@
         },
         "/api/product-by-category": {
             "post": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Danh s\u00e1ch s\u1ea3n ph\u1ea9m theo danh m\u1ee5c",
                 "description": "Get list products by category",
                 "parameters": [
                     {
@@ -427,7 +710,11 @@
         },
         "/api/product-collection": {
             "post": {
-                "description": "S\u1ea3n ph\u1ea9m khuy\u1ebfn m\u1ea1i, discoun, b\u00e1n ch\u1ea1y...",
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Danh s\u00e1ch s\u1ea3n ph\u1ea9m khuy\u1ebfn m\u1ea1i, b\u00e1n ch\u1ea1y...",
+                "description": "S\u1ea3n ph\u1ea9m khuy\u1ebfn m\u1ea1i, discount, b\u00e1n ch\u1ea1y...",
                 "parameters": [
                     {
                         "name": "id",
@@ -461,6 +748,10 @@
         },
         "/api/single-product": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Chi ti\u1ebft s\u1ea3n ph\u1ea9m",
                 "description": "Chi ti\u1ebft s\u1ea3n ph\u1ea9m",
                 "parameters": [
                     {
@@ -488,6 +779,10 @@
         },
         "/api/related-product": {
             "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "S\u1ea3n ph\u1ea9m li\u00ean quan",
                 "description": "S\u1ea3n ph\u1ea9m li\u00ean quan",
                 "parameters": [
                     {
@@ -515,6 +810,10 @@
         },
         "/api/main-slider": {
             "get": {
+                "tags": [
+                    "Slider"
+                ],
+                "summary": "Main slider",
                 "description": "Get Main slider",
                 "responses": {
                     "200": {
@@ -533,6 +832,7 @@
         },
         "/api/list-locator": {
             "get": {
+                "summary": "Danh s\u00e1ch kho h\u00e0ng",
                 "description": "List danh s\u00e1ch t\u1ea5t c\u1ea3 c\u00e1c \u0111\u1ecba \u0111i\u1ec3m kho",
                 "responses": {
                     "200": {
